# OS_lab2

./: CMakeLists.txt  Make.xml  main.cpp  test1.xml  test2.xml
doc/: report 2.odt  report.odt  М80-210Б-22_СИСЕНОВ_KP.docx
src/: CMakeLists.txt  Dynamic_Main.cpp  Static_Main.cpp  calc.cpp  child1.cpp  child2.cpp  control.cpp  dag.cpp  dag.h  input.txt  main.c  main.cpp  main2.c  main3.cpp  mainAsync.cpp  mainSync.cpp  parent.cpp  parserIni.cpp  parserIni.h  realization.hpp  realization_1.cpp  realization_2.cpp  shared_memory.hpp  tree.hpp
test/: list.c  main.c
